2006-12-20  Ryan P Skadberg  <skadz@stigmata.org>

	* utils.xml: Rhythmbox Applet -> Music Applet, fixed link and desc

2006-10-16  James Livingston  <doclivingston@gmail.com>

	* screenshots.xml, screenshots/*: update screenshots to not be
	ancient.

2006-10-01  James Livingston  <doclivingston@gmail.com>

	* news.xml: update with news of 0.9.6

2006-06-15  James Livingston  <doclivingston@gmail.com>

	* news.xml: update with news of 0.9.5

2006-04-16  James Livingston  <doclivingston@gmail.com>

	* news.xml: add news of 0.9.4

2006-03-20  James Livingston  <jrl@ids.org.au>

	* mkpage.xsl: make the "Home" link go to our main page, not www.gnome.org

2006-03-12  James Livingston  <jrl@ids.org.au>

	* download.xml: update dependency info, remove links to really old
	binary packages (0.8.8).

2006-02-06  James Livingston  <jrl@ids.org.au>

	* news.xml: update with news of 0.9.3 and 0.9.3.1

2005-11-28  James Livingston <jrl@ids.org.au>

	* news.xml: add news of 0.9.2

2005-09-13  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: install header.png as well

2005-09-05  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: added

2005-09-05  Bastien Nocera  <hadess@hadess.net>

	* faq.xml: update the xine-lib entry, the tag editing entry, and 
	add one for the "clear" search button

2005-08-10  Bastien Nocera  <hadess@hadess.net>

	* development.xml:
	* download.xml:
	* index.xml:
	* news.xml: updated for 0.9.0 release and move back to CVS
	* test.sh: added a way to generate the pages without having to build
	the whole of gnomeweb-wml
