@@ -2,7 +2,15 @@
 <page>
   <title>Development</title>
   <body>
-    <h2>CVS</h2>
-    <p>Rhythmbox is maintained primarily in the <a href="http://developer.gnome.org/tools/cvs.html">GNOME CVS</a>. You can also see the current code in the <a href="http://cvs.gnome.org/viewcvs/rhythmbox/">CVS Web</a> service.</p>
+    <h2>SVN</h2>
+    <p>Rhythmbox is maintained primarily in <a href="http://svn.gnome.org/">GNOME SVN</a>. You can also see the current code in the <a href="http://svn.gnome.org/viewcvs/rhythmbox/">SVN Web</a> service.</p>
+    <p>If you don't have a GNOME SVN account, you can check out the current developent tree (trunk) using
+       "<code>svn co http://svn.gnome.org/svn/rhythmbox/trunk rhythmbox</code>".
+       If you do have a GNOME SVN account, use
+       "<code>svn co svn+ssh://yourusername@svn.gnome.org/svn/rhythmbox/trunk rhythmbox</code>"
+    </p>
+    <h2>IRC</h2>
+    <p>The Rhythmbox developers, and others interested in Rhythmbox, hang out in thr #rhythmbox IRC channel on irc.gimp.net.
+       Feel free to stop by and ask questions or discuss some ideas.</p>
   </body>
 </page>
