@@ -1,116 +1,0 @@
-<?xml version='1.0'?>
-<page>
-  <title>Frequently Asked Questions</title>
-  <body>
-    <a name="badfiles"/>
-    <h3>
-      Some files don't play back or aren't loaded into the library.
-    </h3>
-    <blockquote>
-      <p>
-	See <a href="http://bugzilla.gnome.org/show_bug.cgi?id=138435">this</a>
-	tracker bug on GStreamer (only applicable if you use the GStreamer
-	player).
-      </p>
-    </blockquote>
-
-    <a name="loadcrash"/>
-    <h3>
-      When I try to import a folder to my library, Rhythmbox crashes. 
-      What do I do now?
-    </h3>
-    <blockquote>
-      <p>
-	Run Rhythmbox from a terminal passing it the -d option, and import
-	the folder which crashes Rhythmbox. It will display a lot of 
-	information, and should tell you which file it was trying to import
-	when it crashed. Move away that file from the folder and try again. 
-	You'll often find that it's a wma or Quicktime file which make
-	GStreamer crash. Once you spotted the bad file, file a bug on 
-	bugzilla.gnome.org and make the file available to the developers
-	somehow.
-      </p>
-    </blockquote>
-
-    <a name="fedoramp3"/>
-    <h3>
-      I'm using Fedora, and Rhythmbox can't import nor play mp3 files. 
-      What's wrong?
-    </h3>
-    <blockquote>
-      <p>
-	Red Hat can't ship mp3 players as part of Fedora because of legal 
-	issues. Follow these <a href="http://gstreamer.freedesktop.org/download/fedora.html">instructions</a> to get GStreamer packages with mp3 support.
-      </p>
-    </blockquote>
-
-
-    <a name="xineplayer"/>
-    <h3>
-      I would like to use the Xine player instead of the GStreamer
-    one. How can I enable it?
-    </h3>
-    <blockquote>
-      <p>
-      The xine-lib backend was removed as it was unmaintained, and GStreamer
-      reached the necessary standards for Rhythmbox' use. It also allows use
-      to do things like Music sharing and Audio CD creation otherwise not
-      possible with the xine-lib backend.
-      </p>
-    </blockquote>
-    <a name="activation"/>
-    <h3>
-      When I start Rhythmbox, I get this "failed to activate the
-      shell: (null)" dialog box. What can I do about this?
-    </h3>
-    <blockquote>
-      <p>
-      This issue is caused when Rhythmbox is not installed in the same
-      prefix as GNOME (bonobo-activation, specifically). The easy
-      workaround for this is to pass <samp>--no-registration</samp> to
-      Rhythmbox.  You may also link the
-      <samp>GNOME_Rhythmbox.server</samp> file into your
-      <samp>prefix/lib/bonobo/servers</samp> directory.
-      </p>
-    </blockquote>
-    <a name="tagediting"/>
-    <h3>
-      Why will preferences not let me edit my song tag info?
-    </h3>
-    <blockquote>
-      <p>
-      Some mp3s are not detected properly by <a href="http://www.gstreamer.net">GStreamer</a>.
-      Rhythmbox supports id3 tag editing as an experimental feature. This is a
-      feature that will be supported at some point in the future. Use the
-      <samp>--enable-tag-writing</samp> flag to <samp>configure</samp> to enable
-      it, at your own risk obviously.
-      </p>
-    </blockquote>
-    <a name="tagediting-other"/>
-    <h3>
-      So if I cannot edit my song tags in Rhythmbox, what is the best way?
-    </h3>
-    <blockquote>
-      <p>
-      A 3rd party application like <a href="http://easytag.sourceforge.net/">EasyTAG</a> will allow
-      you to edit your song information.
-      </p>
-    </blockquote>
-    <a name="searchclear"/>
-    <h3>
-      Would it be possible to have a <i>Clear</i> button next to the search entry?
-    </h3>
-    <blockquote>
-      <p>
-      This was discussed numerous times on the mailing-list. Please read the
-      thread on the <a href="http://lists.gnome.org/archives/rhythmbox-devel/2003-November/msg00189.html">mailing-list</a>, as well as the <a href="http://bugzilla.gnome.org/show_bug.cgi?id=128109">resolved bug</a>.
-      </p>
-    </blockquote>
-
-    <div class="faqmaint" id="faqmaint">
-      <p>
-	 F.A.Q. maintained by <a href="http://www.dersoldat.org/">Sean Harshbarger</a>.
-      </p>
-     </div>
-  </body>
-</page>
