@@ -3,6 +3,85 @@
   <title>News</title>
   <body>
   <newsitem>
+      <title>Rhythmbox 0.9.8 "Type Slowly"</title>
+      <date>Wednesday 21st February 2007</date>
+      <body>
+        <p>On behalf of the Rhythmbox developers, I'm proud to announce the newest
+	  release of the Rhythmbox 0.9 series, which includes a large number of
+	  fixes, improvements and new features.</p>
+
+        <p>Notable new features include:</p>
+        <ul>
+            <li>Visualisations.</li>
+            <li>Ability to transfer tracks to "generic" MP# players.</li>
+            <li>A browser for the Jamendo online catalogue of free music.</li>
+            <li>Improved album-art support, including art in song-change
+                notifications and tray-icon tooltips</li>
+        </ul>
+
+        <p>Updated Translations</p>
+        <ul>
+          <li>ca - Jordi Mallach</li>
+          <li>da - Peter Bach</li>
+          <li>de - Hendrik Brandt</li>
+          <li>en_CA - Adam Weinberger</li>
+          <li>en_GB - David Lodge</li>
+          <li>fr - Jonathan Ernst and Stéphane Raimbault</li>
+          <li>gl - Ignacio Casal Quinteiro</li>
+          <li>hi - Gaurav Mishra (NEW)</li>
+          <li>it - Luca Ferretti</li>
+          <li>lt - Žygimantas Beručka</li>
+          <li>nl - Tino Meinen</li>
+          <li>pl - Artur Flinta and the Gnome Polish Team</li>
+          <li>pt_BR - Guilherme de S. Pastore</li>
+          <li>sv - Daniel Nylander</li>
+          <li>vi - Nguyễn Thái Ngọc Duy</li>
+        </ul>
+      </body>
+  </newsitem>
+
+  <newsitem>
+      <title>Rhythmbox 0.9.7 "I Love Perth"</title>
+      <date>Tuesday 19th December 2006</date>
+      <body>
+        <p>On behalf of the Rhythmbox developers, I'm proud to announce the newest
+	  release of the Rhythmbox 0.9 series, which includes a large number of
+	  fixes, improvements and new features.</p>
+
+        <p>Notable new features include:</p>
+        <ul>
+            <li>Support for the MagnaTune online music store</li>
+            <li>Streaming online radio from last.fm</li>
+        </ul>
+
+        <p>Overview of Changes in Rhythmbox 0.9.6</p>
+        <ul>
+          <li>fix DAAP seeking (Jonathan Matthew: #330410)</li>
+        </ul>
+
+        <p>Updated Translations</p>
+        <ul>
+          <li>ar - Djihed Afifi</li>
+          <li>ca - Jordi Mallach, Josep Puigdemont i Casamajó</li>
+          <li>dz - Pema Geyleg (New)</li>
+          <li>el - Nikos Charonitakis</li>
+          <li>en_CA - Adam Weinberger</li>
+          <li>es - Francisco Javier F. Serrador </li>
+          <li>fi - Ilkka Tuohela</li>
+          <li>gl - Ignacio Casal Quinteiro</li>
+          <li>hu - Gabor Kelemen</li>
+          <li>it - Luca Ferretti</li>
+          <li>ja - Takeshi AIHANA</li>
+          <li>lt - Žygimantas Beručka</li>
+          <li>nb - Kjartan Maraas</li>
+          <li>nl - Vincent van Adrighem</li>
+          <li>sv - Fredrik Tuomas</li>
+          <li>vi - Nguyễn Thái Ngọc Duy</li>
+        </ul>
+      </body>
+  </newsitem>
+
+  <newsitem>
       <title>Rhythmbox 0.9.6 "Live from the shores of lake Burley-Griffin"</title>
       <date>Sunday 1st October 2006</date>
       <body>
