@@ -1,3 +1,10 @@
+2007-03-20  James Livingston  <doclivingston@gmail.com>
+
+	* development.xml:
+	* faq.xml:
+	* mkpage.xsl:
+	* news.xml: update for SVN change and 0.9.8 release
+
 2006-12-20  Ryan P Skadberg  <skadz@stigmata.org>
 
 	* utils.xml: Rhythmbox Applet -> Music Applet, fixed link and desc
